# Neylo

./: .gitignore  AGENTS.md  PLAN_v2.md  pyproject.toml  test.py
configs/: botsort.yaml  pipeline.yaml
docker/: Dockerfile
docs/: progress.md
docs/decisions/: architecture.md
docs/requirements/: api.md  data.md  detection.md  evaluation.md  pipeline.md  tracking.md  ui.md
env/: environment.yml  requirements.txt
neylo/cli/: main.py
neylo/pipeline/: __init__.py  decode.py  export.py  ingest.py  run.py
neylo/schemas/: __init__.py  common.py  detection.py  run.py  track.py  video.py
neylo/services/detection/: __init__.py  yolo.py
neylo/services/tracking/: __init__.py  botsort.py
tests/: conftest.py  test_cli.py  test_decode.py  test_detection.py  test_export.py  test_ingest.py  test_run.py  test_schemas.py  test_skeleton.py  test_tracking.py
